--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.tascape</groupId>
     <artifactId>reactor</artifactId>
-    <version>1.4.4-SNAPSHOT</version>
+    <version>2.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>reactor</name>
 
@@ -186,6 +186,7 @@
                         <exclude>*.yml</exclude>
                         <exclude>*.zip</exclude>
                         <exclude>nbactions*</exclude>
+                        <exclude>.sdkmanrc</exclude>
                     </excludes>
                 </configuration>
             </plugin>
